# oxircise

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: lib.rs  main.rs
