[package]
name = "oxircise"
version = "0.1.0"
edition = "2021"
authors = ["Luna Amora <luna.mberry@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
