[package]
name = "oxircise"
version = "0.1.0"
edition = "2021"
authors = ["Luna Amora <luna.mberry@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"

[lib]
name = "oxilib"
path = "src/lib.rs"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_scene",         # Scenes management
#   "bevy_gilrs",         # Gamepad input support
#   "bevy_audio",         # Builtin audio
  "bevy_winit",         # Window management
#   "filesystem_watcher", # Asset hot-reloading

  # Graphics Rendering:
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
#   "bevy_text",          # Text/font rendering
#   "bevy_ui",            # UI toolkit

  # File formats:
  "png"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"]}
console_error_panic_hook = "0.1"

[features]
native = ["bevy/dynamic"]
wasm = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = "thin"
